[gd_scene load_steps=12 format=3 uid="uid://ddjkah6qnia25"]

[ext_resource type="Script" path="res://Enemy/enemy.gd" id="1_4ssw2"]
[ext_resource type="Texture2D" uid="uid://bgmsxqb66id3" path="res://Textures/Enemy/kolbold_strong.png" id="2_qt13u"]
[ext_resource type="PackedScene" uid="uid://b86dn3foyd106" path="res://Utility/hurt_box.tscn" id="3_03v1q"]
[ext_resource type="PackedScene" uid="uid://bgy0ehpc8vp13" path="res://Utility/hit_box.tscn" id="4_527m0"]
[ext_resource type="AudioStream" uid="uid://blj576gjvi5ue" path="res://Audio/SoundEffect/enemy_hit.ogg" id="5_piind"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8w6lu"]
radius = 8.0

[sub_resource type="Animation" id="Animation_ij81n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_7g081"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b13b3"]
_data = {
"RESET": SubResource("Animation_ij81n"),
"walk": SubResource("Animation_7g081")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6wymx"]
size = Vector2(25, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nvxw4"]
size = Vector2(20, 24.5)

[node name="enemy_kobold_strong" type="CharacterBody2D"]
collision_layer = 5
collision_mask = 5
motion_mode = 1
script = ExtResource("1_4ssw2")
movement_speed = 28.0
hp = 20.0
enemy_damage = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_qt13u")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 2)
shape = SubResource("CircleShape2D_8w6lu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b13b3")
}

[node name="HurtBox" parent="." instance=ExtResource("3_03v1q")]
collision_layer = 4
collision_mask = 4
HurtBoxType = 1

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_6wymx")

[node name="HitBox" parent="." instance=ExtResource("4_527m0")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(1, 1.75)
shape = SubResource("RectangleShape2D_nvxw4")

[node name="snd_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_piind")
bus = &"sfx"

[node name="dmg_num_canvas" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]

[editable path="HurtBox"]
[editable path="HitBox"]
